# pythonic-rebirth

./: .gitignore  01_python_refresher.ipynb  README-SETUP.md  README.md  day1_python_refresher.ipynb  pyproject.toml  utils.py
.postman/: resources.yaml
02-pandas-data-wrangling/: data_wrangling.ipynb
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AmbientTrace.jsx  CostForm.jsx  DiabetesForm.jsx  LiveClock.jsx  PneumoniaForm.jsx  ResultPanel.jsx  Waveform.jsx  icons.jsx
models/: btc_decision_tree.pkl  btc_linear_regression_torch.pth  car_prices_decision_tree_model.pkl  decision_tree_model.pkl  electricity_linear_regression_torch.pth  insurance_linear_regression_torch.pth  linear_regression_model.pkl  linear_regression_torch.pth
notebooks/: 001_python_refresher.ipynb  002_pandas_data_wrangling.ipynb  003_numpy_and_matplotlib.ipynb  004_sklearn.ipynb  005_image_processing_with_numpy.ipynb  006(a)_basics_of_ml.ipynb  006(b)_basics_of_ml.ipynb  006(c)_basics_of_ml.ipynb  006(d)_basics_of_ml.ipynb  006_basics_of_ml.ipynb  007(a)_binary_and_multiclass_classification.ipynb  007(b)_binary_and_multiclass_classification.ipynb  007(c)_binary_and_multiclass_classification.ipynb
notebooks/008_Flask_ngrok_react/: The Diagnostic Bench_README.md  inspect_model.py
notebooks/008_Flask_ngrok_react/backend/: app.py
outputs/: car-sales-outputs.csv
postman/collections/pythonic-rebirth/: New Request.request.yaml
postman/collections/pythonic-rebirth/.resources/: definition.yaml
txt files/: example
