[project]
name = "poetry_add_pandas"
version = "3.0.4"
description = "Latest Pandas version at this moment"
authors = [
    {name = "Muhammad Azmat",email = "muhammadazmat018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.3.0,<8.0.0)",
    "numpy (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
