[tool.poetry]
package-mode = false

[project]
name = "pythonic_rebirth"
version = "3.0.4"
description = "Latest Pandas version at this moment"
authors = [
    { name = "Muhammad Azmat", email = "muhammadazmat018@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15,!=3.14.1"
dependencies = [
    "ipykernel (>=7.3.0,<8.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pandas-stubs (>=3.0.3,<3.1.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "opencv-python (>=5.0.0.93,<6.0.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "kagglehub (>=1.0.2,<2.0.0)",
    "torch (>=2.13.0,<3.0.0)",
    "torchvision (>=0.28.0,<0.29.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-scss (>=0.5,<0.6)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
